# fooorma

./: .env.example  .gitignore  .npmrc  CLAUDE.md  README.md  SKILLS.md  index.html  netlify.toml  package.json  pnpm-lock.yaml  vite.config.ts  vite.lib.config.ts
.claude/: 2d-system.md
.github/: FUNDING.yml
.github/workflows/: release.yml
dist-lib/: fooorma.js  fooorma.js.map  fooorma.umd.cjs  fooorma.umd.cjs.map
docs/: library.html  query-api.md
mcp-server/: README.md  package-lock.json  package.json
mcp-server/src/: index.ts  protocol.ts  resources.ts  tools.ts  ws-bridge.ts
netlify/edge-functions/: og-view.ts
public/icons/: README.txt
src/: App.svelte  app.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AboutPage.svelte  BottomCodePanel.svelte  CodeEditor.svelte  CodePanel.svelte  ColorPicker.svelte  GradColorEditor.svelte  LibraryPage.svelte  ProjectsPanel.svelte  RightPanel.svelte  SharedView.svelte  SliderRow.svelte  StatusBar.svelte  TopBar.svelte  Viewport.svelte
src/lib/: api-snippets.ts  auth.svelte.ts  cloud.svelte.ts  editor-font.ts  export-cmyk-tiff.ts  index.ts  viewport.ts
src/lib/layers/: renderer2d.ts  types.ts
src/lib/mcp-bridge/: handler.ts  index.svelte.ts  protocol.ts
src/lib/palettes/: index.ts
src/lib/patterns/: index.ts
src/lib/persist/: index.ts
src/lib/query/: index.ts
src/lib/renderer/: index.ts  types.ts  webgl2.ts  webgpu.ts
supabase/: policies.sql
(+8 files in other folders)
