[package]
name = "forma"
version = "0.1.0"
description = "Forma — Procedural Art Studio"
authors = []
edition = "2021"

[lib]
name = "forma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
