[package]
name = "fooorma"
version = "0.1.0"
description = "Fooorma — Procedural Art Studio"
authors = []
edition = "2021"

[lib]
name = "fooorma_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
